--- a/src/styling.css
+++ b/src/styling.css
@@ -1,3 +1,52 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+h1 {
+  padding: 10px;
+  background-color: LightGrey;
+  border-radius: 10px;
+  margin:auto;
+}
+hr {
+  border: 5px solid DarkGrey;
+  border-radius: 5px;
+}
+button {
+    background: White;
+    min-height: 2em;
+    min-width: 2em;
+    width: auto;
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 5px;
+    margin-top: 5px;
+    font-weight: Bold;
+    cursor:pointer;
+}
+section {
+  margin-bottom: 5px;
+}
+
+/* Results Table Styling */
+table {
+  border-collapse: collapse;
+}
+th, td {
+  text-align: left;
+  padding: 10px;
+}
+tr:nth-child(even) {
+  background-color: LightGrey
+}
+tr:nth-child(odd) {
+  background-color: WhiteSmoke
+}
+tr:first-child {
+  background-color: DimGrey;
+  color: White;
+  font-weight: Bold;
+}
+th {
+  background-color: #04AA6D;
+  color: white;
+}
